Se agrega el proyecto

--- a/Inicio.html
+++ b/Inicio.html
@@ -11,6 +11,12 @@
    <body>
         <div class="glitch" data-glitch="HACIENDA DE LOS MORALES">HACIENDA DE LOS MORALES</div>
      </div>
+
+
+   <div class="container">
+
+   </div>
+
    
     <div class="galeria">
 
